<resources>
    <string name="app_name">languageofapp</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    //splashscreen
    <string name="tv_appName">WayWeGo</string>
    <string name="tv_appline">The smart way to find your way!</string>
    <string name="tv_privacyline">Privacy Policy</string>
    <string name="button_Getstarted">Get Started</string>

    //splashscreen
    <string name="tv_namecountry">Islamabad, Pakistan</string>
    <string name="tv_navigation">Navigation</string>
    <string name="tv_Nearby">Nearby Places</string>
    <string name="tv_livelocation">Live Location</string>
    <string name="tv_mylocation">My Location</string>




</resources>