<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"> <!-- Change 16dp to your desired radius -->

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/gps" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_appName"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <TextView
        android:id="@+id/appline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/productsansmedium"
        android:text="@string/tv_appline"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_appname"
        app:layout_constraintStart_toStartOf="@+id/tv_appname"
        app:layout_constraintTop_toBottomOf="@id/tv_appname" />


    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/custom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/blue"
        app:layout_constraintStart_toStartOf="@id/privacypolicy"
        app:layout_constraintEnd_toEndOf="@+id/privacypolicy"
        app:layout_constraintBottom_toTopOf="@+id/privacypolicy"
       android:layout_marginBottom="30dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/tv_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:gravity="center"
            android:layout_marginHorizontal="40dp"
            android:text="@string/button_Getstarted"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/privacypolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="50dp"
        android:fontFamily="@font/productsansmedium"
        android:text="@string/tv_privacyline"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>