<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:fontFamily="@font/robot"
                android:gravity="center"
                android:text="@string/tv_appName"
                android:textSize="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_heading">

                <androidx.cardview.widget.CardView
                    android:id="@+id/documentt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    android:clickable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_Document"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/document"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/bangers"
                            android:text="@string/tv_namecountry"
                            android:textColor="@color/blue"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/document"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/island" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>





            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/row3">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_videos"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_Videos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/video"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/bangers"
                            android:text="@string/tv_navigation"
                            android:textColor="@color/blue"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/video"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/navigation_svgrepo_com" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_imagess"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <RelativeLayout
                        android:id="@+id/rl_images"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true">

                        <TextView
                            android:id="@+id/images"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Image"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/bangers"
                            android:text="@string/tv_Nearby"
                            android:textColor="@color/blue"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/Image"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/people_nearby_svgrepo_com" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/row1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/contacttt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="5dp">

                    <RelativeLayout
                        android:id="@+id/rl_contact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_Contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/contact"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/bangers"
                            android:text="@string/tv_livelocation"
                            android:textColor="@color/blue"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/contact"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/world_1_svgrepo_com" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rv_audio">

                        <TextView
                            android:id="@+id/tv_Audio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/audio"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/bangers"
                            android:text="@string/tv_mylocation"
                            android:textColor="@color/blue"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/audio"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/location_svgrepo_com" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>